# rust-stm32

./: Cargo.toml
.cargo/: config.toml
