[package]
name = "hello-stm32-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
test = false
bench = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
nb = "1.1.0"
panic-halt = "1.0.0"
stm32f1xx-hal = { version = "0.11.0", features = ["stm32f103", "medium"] }

[profile.dev]
incremental = false
codegen-units = 1
panic = "abort"

[profile.release]
codegen-units = 1
debug = true
lto = true
panic = "abort"
